# thedealcalc

./: .env  .env.example  .gitignore  README-BLOG.md  README-EXPORTS.md  README.md  index.html  lighthouserc.json  netlify.toml  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
.github/workflows/: lighthouse.yml
docs/: lighthouse.md  prerender.md
file-organizer/: install.bat  pyproject.toml  requirements.txt  run.bat
file-organizer/powershell/: FileOrganizer.psm1
file-organizer/src/file_organizer/: __init__.py  config.py  content_reader.py  database.py  metadata.py  models.py  organizer.py  profiler.py  scanner.py  search.py  taxonomy.py
file-organizer/src/file_organizer/agent/: __init__.py  classifier.py  llm_client.py  service.py  tray.py  watcher.py
file-organizer/src/file_organizer/cli/: __init__.py  main.py
file-organizer/src/file_organizer/dashboard/: __init__.py  app.py
file-organizer/src/file_organizer/dashboard/static/: style.css
file-organizer/src/file_organizer/dashboard/templates/: base.html  browse.html  index.html  review.html  search.html
file-organizer/tests/: test_core.py
public/: _headers  ads.txt  llms.txt  robots.txt  sitemap.xml  us-zip-city-state.min.json
scripts/: prerender.mjs  prerender.routes.mjs  test-exports.mjs  test-zip-lookups.mjs  verify-prerender.mjs
src/: App.tsx  index.css  middleware.ts  vite-env.d.ts
src/app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  sitemap.ts
src/components/: AuthGuard.tsx  ErrorBoundary.tsx  (+3 more)
supabase/: config.toml  seed.sql
(+359 files in other folders)
